Criação das cariaveis na classe Camiao, Central, Itinerario, Paragem, construtor e getters e setters.